fixed font contrast

--- a/css/styles.css
+++ b/css/styles.css
@@ -334,7 +334,7 @@ body {
 
 #headerWrapper {
   background-color: #89BAD9;
-  color: #D90416;
+  color: black;
 }
 
 header {
