--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -20,7 +20,7 @@ body {
 }
 #headerWrapper {
   background-color: $secondaryColor;
-  color: $primaryColor;
+  color: black;
 }
 header {
   display: flex;
